Fix masonry layout issue

--- a/assets/src/block-editor/blocks/image-list/style.css
+++ b/assets/src/block-editor/blocks/image-list/style.css
@@ -3,7 +3,7 @@
 	--var-text-color: #fff;
 }
 
-.mdc-image-list__item {
+.mdc-image-list__item-wrap {
 	position: relative;
 	border: 3px solid transparent;
 
